= tefil changelog

== Master (for 0.1.2)
* Add bin/calc

== Version 0.1.1 [2016-03-11] released
* Add bin/eachsentence
* Add bin/fswiki2md
* Add bin/md2fswiki

== Version 0.1.0 [2015-07-07] released
* Add bin/packpercent .
* Add usage banner.
* Rename bin/formcolumn to columnform
* Add bin/indentstat .
* Add bin/indentconv .
* Module Tefil converted to class Tefil
* Delete require "tempfile" for Ruby 2.1
* Rewrite test to use capture_stdout
* Remove Tefil::TextFilterBase.filter (class method)

== Version 0.0.3 [2013-05-10] released
* Rename TextFilter to Tefil
* Add Tefil::ColumnFormer
* Add -l(left alline) option to formcolumn command.

== Version 0.0.2 [2013-04-18] released
* Adjust to builtinextension-0.1.0.

== Version 0.0.1
* Change indent character from tab to two spaces.
* Rename textfilter to linesub
* Add bin/lineescapezsh
* Add bin/formcolumn
* Add -g option to bin/linesub

== Version 0.0.0
* Initial release.