@@ -1,7 +1,8 @@
 class Tefil::LineSubstituter < Tefil::TextFilterBase
   def initialize(old_str, new_str, options = {})
-    @old_str  = old_str 
-    @new_str  = new_str 
+    @old_str  = old_str
+    @old_str  = /#{old_str}/ if options[:regexp]
+    @new_str  = new_str
     @global = options[:global]
     super(options)
   end
