@@ -10,8 +10,9 @@ end
 
 class TC_LineSubstituter < Test::Unit::TestCase
   def setup
-    @is00 = Tefil::LineSubstituter.new('abc', 'XYZ')
-    @is01 = Tefil::LineSubstituter.new('abc', 'XYZ', {:global => true})
+    @ls00 = Tefil::LineSubstituter.new('abc', 'XYZ')
+    @ls01 = Tefil::LineSubstituter.new('abc', 'XYZ', {:global => true})
+    @ls02 = Tefil::LineSubstituter.new('^a', 'A', {:regexp => true})
   end
 
   def test_process_stream
@@ -21,7 +22,7 @@ class TC_LineSubstituter < Test::Unit::TestCase
     $stdin.puts "ABCDABCD"
     $stdin.rewind
     str = capture_stdout{}
-    result = capture_stdout{ @is00.filter([])}
+    result = capture_stdout{ @ls00.filter([])}
     correct =
       "XYZdabcd\n" +
       "ABCDABCD\n"
@@ -34,9 +35,21 @@ class TC_LineSubstituter < Test::Unit::TestCase
     $stdin.puts "ABCDABCD"
     $stdin.rewind
     str = capture_stdout{}
-    result = capture_stdout{ @is01.filter([])}
+    result = capture_stdout{ @ls01.filter([])}
     correct =
       "XYZdXYZd\n" +
+      "ABCDABCD\n"
+    assert_equal(correct, result)
+
+    setup
+    $stdin = StringIO.new
+    $stdin.puts "abcdabcd"
+    $stdin.puts "ABCDABCD"
+    $stdin.rewind
+    str = capture_stdout{}
+    result = capture_stdout{ @ls02.filter([])}
+    correct =
+      "Abcdabcd\n" +
       "ABCDABCD\n"
     assert_equal(correct, result)
 
