@@ -1,7 +1,8 @@
 = tefil changelog
 
 == Master (for 0.1.2)
-* Add bin/calc
+* bin/calc is added
+* 'bin/linesub --regexp' option is added
 
 == Version 0.1.1 [2016-03-11] released
 * Add bin/eachsentence
